--- a/index.html
+++ b/index.html
@@ -16,60 +16,94 @@
 		</div>
 	</section>
 	<!--Seccion Newsletter, es un boton para suscribir newsletter -->
-	<section class="color">
-		<div class="newsletter">
-			<button id="suscribirse">Suscribete a nuestro newsletter</button>
-		</div>
-	</section>
-	<!-- Seccion Nuestra Pasion -->
-	<section id="about">
-		<div class="logo">
-			<img class="logo" src="assets/img/logo.png" alt="logo">
-		</div>
-		<div class="contenido">
-			<h1>Nuestra <br> Pasión</h1>
-			<p>El té es una bebida utilizada habitualmente por la medicina natural de las civilizaciones orientales para aprovechar sus propiedades terapeuticas, Algunas de sus versiones son:</p>
-		</div>
-	</section>
-	<!--Sobre el te -->
-	<section class="color">
-		<div class="te-diferentes">
-			<div class="tipo-de-te"
-			<h2>Negro</h2>
-			<p>Disminuye la absorcion de colesterol y reduce la posibilidad de sufrir enfermedades cardiovasculares.</p>
-		</div>
-	</div>
-</section>
-<div class="tipo-de-te">
-	<h2>Verde</h2>
-	<p>Reduce la forrmacion de coagulos anormales favoreciendo nuestro corazon,ademas disminuye los niveles de azucar.</p>
-</div>
-<div class="tipo-de-te">
-	<h2>Rojo</h2>
-	<p>Para la depresion,la melancolia y el mal humor.Adicionalkmente facilita la digestionl,ayuda a desintoxicar el organismo</p>
-	<div class="tipo-de-te">
-		<h2>Blanco</h2>
-		<p>Disminuye la actividad de las enzimas que disminuyen la produccion de elastina y colageno de nuestra piel</p>
-		<div class="tipo-de-te">
-			<h2>Oolong</h2>
-			<p>Puede disminuir el nivel de colesterol en sangre y tambien esta recomendado para bajar de peso</p>
-		</div>
-		<section>
+<section class="color">
+			<h1>¿TE GUSTA EL TÉ?</h1>
+
+			<!-- formulario -->
+			<div id="formulario">
+				<label for="nombre">Nombre:</label><br>
+				<input type="text" class="form" id="name" placeholder="ej: Juan Perez"><br>
+
+				<label for="email">Email:</label><br>
+				<input type="text" class="form" id="email" placeholder="ej: algo@correo.com"><br>
+
+				<label for="dir">Dirección:</label><br>
+				<input type="text" class="form" id="dir" placeholder="ej: Radal 1404"><br>
+
+				<label for="seleccion">Té favorito:</label><br>
+				<select name="select" id="seleccion" class="form-select">
+					<option value="Selecciona" class="opcion-0" selected>Selecciona tu té</option>
+					<option value="Negro" id="opcion-1">Negro</option>
+					<option value="Verde" id="opcion-2">Verde</option>
+					<option value="Rojo" id="opcion-3">Rojo</option>
+					<option value="Blanco" id="opcion-4">Blanco</option>
+					<option value="Oolong" id="opcion-5">Oolong</option>
+				</select><br>
+
+              	<input type="checkbox" value="remember-me">
+              	<span>Quiero recibir muestras gratis</span>
+
+			</div>
+			<div class="newsletter">
+				<button id="suscribirse">Suscríbete a nuestro newsletter</button>
+			</div>
+		</section>
+
+		<!-- seccion nuestra pasion -->
+		<section id="about">
 			<div class="logo">
-				<img class="logo" src="assets/img/logo.png" alt="logo">
+				<img src="assets/img/logo.png" alt="logo" class="logo">
 			</div>
 			<div class="contenido">
-				<h1>Disfruta <br> el sabor del té</h1>
-				<!--Footer-->
-				<footer>
-					<p>Té Encanto: Av. Italia 1317, Providencia</p>
-				</footer>
-
-
-
+				<h1>Nuestra<br>Pasión</h1>
+				<p>El té es una bebida utilizada habitualmente por la medicina natural de las civilizaciones orientales para aprovechar sus propiedades terapéuticas. Algunas de sus versiones son:</p>
 			</div>
-
 		</section>
+
+		<!-- sobre el té -->
+		<section class="color">
+			<div class="te-diferentes">
+				<div class="tipo-de-te">
+					<h2>Negro</h2>
+					<p>Disminuye la absorción de colesterol y reduce la posibilidad de sufrir enfermedades cardiovasculares.</p>
+				</div>
+				<div class="tipo-de-te">
+					<h2>Verde</h2>
+					<p>Reduce la formación de coágulos aormales favoreciendo nuestro corazón, además disminuye los niveles de azúcar.</p>
+				</div>
+				<div class="tipo-de-te">
+					<h2>Rojo</h2>
+					<p>Para la depresión, la melancolía y el mal humor. Adicionalmente facilita la digestión, ayuda a desintoxicar el organismo.</p>
+				</div>
+				<div class="tipo-de-te">
+					<h2>Blanco</h2>
+					<p>Disminuye la actividad de las enzimas que disminuyen la producción de elastina y colágeno en nuestra piel.</p>
+				</div>
+				<div class="tipo-de-te">
+					<h2>Oolong</h2>	
+					<p>Puede disminuir el nivel de colesterol en la sangre y también está recomendado para bajar de peso.</p>
+				</div>
+			</div>
+		</section>
+
+		<!-- seccion disfruta -->
+		<section id="disfruta">
+			<div class="logo">
+				<img src="assets/img/logo.png" alt="logo" class="logo">
+			</div>
+			<div class="contenido">
+				<h1>Disfruta<br>el sabor del té</h1>
+			</div>
+		</section>
+
+		<!-- footer -->
+		<footer>
+			<p>Té encanto: Av. Italia 1317, Providencia</p>
+		</footer>
+
+		<script src="assets/js/main.js"></script>
+	</body>
+</html>
 	<script src= "assets/js/main.js" type="text/javascript" charset="utf-8" async defer></script>
 	</body>
 	</html>
